add behat and phpunit tests

--- a/src/Acme/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Acme/AdminBundle/Resources/views/Default/index.html.twig
@@ -27,6 +27,7 @@
         }
     </script>
 
+    <h1>List of Endpoints</h1>
     <table class="endpoints_list">
         <tr>
             <th style="width: 62px;">
@@ -70,7 +71,7 @@
                 {{ form_errors(form.parser) }}
             </div>
             {{ form_rest(form) }}
-            <input type="submit" value="Add" class="submit" />
+            <input type="submit" value="Add" class="submit" id="submit" />
         </form>
     </div>
 
